fixed vertical spacing on md breakpoint, news

--- a/styles/NewsTemplate.module.css
+++ b/styles/NewsTemplate.module.css
@@ -13,10 +13,11 @@
 }
 
 .news-poster > img {
+  right: 0 !important;
+  left: auto !important;
   max-width: 100%;
   max-height: 100%;
   width: auto !important;
-  height: auto !important;
 }
 
 .content-column {
